examples/neg/high_loop_grow/alice.oio
ALICE

channel
    #reach [ALICE/A1;BOB/B1;ALICE/A2;BOB/B2]
    #overhead 1
    BOB/B1@{H} : int@{H};

channel
    #reach [ALICE/A2;BOB/B2]
    #cost 1
    BOB/B2@{H} : int@{H};

#reach [ALICE/A1;BOB/B1;ALICE/A2;BOB/B2]
#cost 2
#overhead 1
A1@{H} (secret : int@{H}) {
    send(BOB/B1, secret+1);
    send(BOB/B2, secret+1);
}

#reach [ALICE/A2;BOB/B2]
#cost 1
A2@{H} (secret : int@{H}) {
    print("ALICE/A2 received", secret);
    send(BOB/B2, secret+1);
}
